crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__preview__RUF054_RUF054.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF054 Indented form feed
 --> RUF054.py:8:2
  |
6 | # Errors
7 |
8 |  ␌
  |  ^
help: Remove form feed

RUF054 Indented form feed
  --> RUF054.py:10:3
   |
10 |         ␌
   |         ^
11 |
12 | def _():
   |
help: Remove form feed

RUF054 Indented form feed
  --> RUF054.py:13:2
   |
12 | def _():
13 |     ␌    pass
   |     ^
14 |
15 | if False:
   |
help: Remove form feed

RUF054 Indented form feed
  --> RUF054.py:17:5
   |
15 | if False:
16 |     print('F')
17 |     ␌print('T')
   |     ^
help: Remove form feed
