crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__preview__RUF055_RUF055_2.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF055 [*] Plain string pattern passed to `re` function
 --> RUF055_2.py:7:1
  |
6 | # this should be replaced with `"abc" not in s`
7 | re.search("abc", s) is None
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Replace with `"abc" not in s`
  |
7 - re.search("abc", s) is None
7 + "abc" not in s
  |

RUF055 [*] Plain string pattern passed to `re` function
  --> RUF055_2.py:11:1
   |
10 | # this should be replaced with `"abc" in s`
11 | re.search("abc", s) is not None
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Replace with `"abc" in s`
   |
11 - re.search("abc", s) is not None
11 + "abc" in s
   |

RUF055 [*] Plain string pattern passed to `re` function
  --> RUF055_2.py:15:1
   |
14 | # this should be replaced with `not s.startswith("abc")`
15 | re.match("abc", s) is None
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Replace with `not s.startswith("abc")`
   |
15 - re.match("abc", s) is None
15 + not s.startswith("abc")
   |

RUF055 [*] Plain string pattern passed to `re` function
  --> RUF055_2.py:19:1
   |
18 | # this should be replaced with `s.startswith("abc")`
19 | re.match("abc", s) is not None
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Replace with `s.startswith("abc")`
   |
19 - re.match("abc", s) is not None
19 + s.startswith("abc")
   |

RUF055 [*] Plain string pattern passed to `re` function
  --> RUF055_2.py:23:1
   |
22 | # this should be replaced with `s != "abc"`
23 | re.fullmatch("abc", s) is None
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Replace with `s != "abc"`
   |
23 - re.fullmatch("abc", s) is None
23 + s != "abc"
   |

RUF055 [*] Plain string pattern passed to `re` function
  --> RUF055_2.py:27:1
   |
26 | # this should be replaced with `s == "abc"`
27 | re.fullmatch("abc", s) is not None
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Replace with `s == "abc"`
   |
27 - re.fullmatch("abc", s) is not None
27 + s == "abc"
   |

RUF055 [*] Plain string pattern passed to `re` function
  --> RUF055_2.py:33:5
   |
31 |   # expression being replaced (which we'd lose)
32 |   if (
33 | /     re.fullmatch(
34 | |         "a really really really really long string",
35 | |         s,
36 | |     )
37 | |     # with a comment here
38 | |     is None
   | |___________^
39 |   ):
40 |       pass
   |
help: Replace with `s != "a really really really really long string"`
   |
33 -     re.fullmatch(
34 -         "a really really really really long string",
35 -         s,
36 -     )
37 -     # with a comment here
38 -     is None
33 +     s != "a really really really really long string"
   |
note: This is an unsafe fix and may change runtime behavior

RUF055 [*] Plain string pattern passed to `re` function
  --> RUF055_2.py:46:5
   |
44 |   # expression)
45 |   if (  # leading
46 | /     re.fullmatch(
47 | |         "a really really really really long string",
48 | |         s,
49 | |     )
50 | |     is None  # trailing
   | |___________^
51 |   ):
52 |       pass
   |
help: Replace with `s != "a really really really really long string"`
   |
46 -     re.fullmatch(
47 -         "a really really really really long string",
48 -         s,
49 -     )
50 -     is None  # trailing
46 +     s != "a really really really really long string"  # trailing
   |
