crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__preview__RUF058_RUF058_0.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF058_0.py:7:1: RUF058 [*] `itertools.starmap` called on `zip` iterable
  |
5 | # Errors
6 |
7 | starmap(func, zip())
  | ^^^^^^^^^^^^^^^^^^^^ RUF058
8 | starmap(func, zip([]))
  |
  = help: Use `map` instead

ℹ Safe fix
4 4 | 
5 5 | # Errors
6 6 | 
7   |-starmap(func, zip())
  7 |+map(func, [])
8 8 | starmap(func, zip([]))
9 9 | 
10 10 | 

RUF058_0.py:8:1: RUF058 [*] `itertools.starmap` called on `zip` iterable
  |
7 | starmap(func, zip())
8 | starmap(func, zip([]))
  | ^^^^^^^^^^^^^^^^^^^^^^ RUF058
  |
  = help: Use `map` instead

ℹ Safe fix
5 5 | # Errors
6 6 | 
7 7 | starmap(func, zip())
8   |-starmap(func, zip([]))
  8 |+map(func, [])
9 9 | 
10 10 | 
11 11 | starmap(func, zip(a, b, c,),)

RUF058_0.py:11:1: RUF058 [*] `itertools.starmap` called on `zip` iterable
   |
11 | starmap(func, zip(a, b, c,),)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ RUF058
   |
   = help: Use `map` instead

ℹ Safe fix
8  8  | starmap(func, zip([]))
9  9  | 
10 10 | 
11    |-starmap(func, zip(a, b, c,),)
   11 |+map(func, a, b, c,)
12 12 | 
13 13 | 
14 14 | starmap(

RUF058_0.py:14:1: RUF058 [*] `itertools.starmap` called on `zip` iterable
   |
14 | / starmap(
15 | |     func,  # Foo
16 | |     zip(
17 | |         # Foo
18 | |
19 | |     )
20 | | )
   | |_^ RUF058
21 |
22 |   (  # Foo
   |
   = help: Use `map` instead

ℹ Unsafe fix
11 11 | starmap(func, zip(a, b, c,),)
12 12 | 
13 13 | 
14    |-starmap(
   14 |+map(
15 15 |     func,  # Foo
16    |-    zip(
   16 |+    []
17 17 |         # Foo
18 18 | 
19    |-    )
   19 |+    
20 20 | )
21 21 | 
22 22 | (  # Foo

RUF058_0.py:22:1: RUF058 [*] `itertools.starmap` called on `zip` iterable
   |
20 |   )
21 |
22 | / (  # Foo
23 | |     itertools
24 | |     ) . starmap (
25 | |
26 | |     func,  zip (
27 | |         a, b, c,
28 | |     ),
29 | | )
   | |_^ RUF058
30 |
31 |   (  # Foobar
   |
   = help: Use `map` instead

ℹ Unsafe fix
19 19 |     )
20 20 | )
21 21 | 
22    |-(  # Foo
23    |-    itertools
24    |-    ) . starmap (
   22 |+map (
25 23 | 
26    |-    func,  zip (
   24 |+    func,   
27 25 |         a, b, c,
28    |-    ),
   26 |+    
29 27 | )
30 28 | 
31 29 | (  # Foobar

RUF058_0.py:31:1: RUF058 [*] `itertools.starmap` called on `zip` iterable
   |
29 |   )
30 |
31 | / (  # Foobar
32 | |   (  starmap  )
33 | |     # Bazqux
34 | | ) \
35 | | (func,
36 | |  ( (
37 | |      (  # Zip
38 | |     (
39 | |         (  zip
40 | |            # Zip
41 | |            )
42 | |     )
43 | |   )
44 | |      (a,  # A
45 | |          b,  # B
46 | |          c,  # C
47 | |    )      )
48 | |    ),
49 | | )
   | |_^ RUF058
50 |
51 |   starmap(
   |
   = help: Use `map` instead

ℹ Unsafe fix
29 29 | )
30 30 | 
31 31 | (  # Foobar
32    |-  (  starmap  )
   32 |+  (  map  )
33 33 |     # Bazqux
34 34 | ) \
35 35 | (func,
36    |- ( (
37    |-     (  # Zip
38    |-    (
39    |-        (  zip
40    |-           # Zip
41    |-           )
42    |-    )
43    |-  )
44    |-     (a,  # A
   36 |+ 
   37 |+     a,  # A
45 38 |          b,  # B
46 39 |          c,  # C
47    |-   )      )
48    |-   ),
   40 |+   
49 41 | )
50 42 | 
51 43 | starmap(

RUF058_0.py:51:1: RUF058 [*] `itertools.starmap` called on `zip` iterable
   |
49 |   )
50 |
51 | / starmap(
52 | |     func \
53 | |     , \
54 | |     zip \
55 | |         (
56 | |             a,\
57 | |             b,\
58 | |             c,\
59 | |         )
60 | | )
   | |_^ RUF058
   |
   = help: Use `map` instead

ℹ Safe fix
48 48 |    ),
49 49 | )
50 50 | 
51    |-starmap(
   51 |+map(
52 52 |     func \
53 53 |     , \
54    |-    zip \
55    |-        (
   54 |+     \
   55 |+        
56 56 |             a,\
57 57 |             b,\
58 58 |             c,\
59    |-        )
   59 |+        
60 60 | )
61 61 | 
62 62 |
