crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__preview__RUF058_RUF058_1.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF058_1.py:7:10: RUF058 `itertools.starmap` called on `zip` iterable
  |
6 | map = {}
7 | for _ in starmap(print, zip("A", "12")):
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ RUF058
8 |     pass
  |
  = help: Use `map` instead
